# ChillWithYou2Thunderstore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: backfill.yml  build-and-validate-thunderstore.yml  build-and-validate.yml  orchestrator.yml  publish-thunderstore.yml  (+3 more)
1.5.3/: _sync_metadata.json  readme_rewrite.md
1.7.1/: _sync_metadata.json  readme_rewrite.md
1.7.2/: _sync_metadata.json  readme_rewrite.md
1.7.3/: _sync_metadata.json  readme_rewrite.md
1.7.4/: _sync_metadata.json  readme_rewrite.md
1.8.0/: _sync_metadata.json  readme_rewrite.md
1.8.1/: _sync_metadata.json  readme_rewrite.md
1.9.0/: _sync_metadata.json  readme_rewrite.md
1.9.1/: _sync_metadata.json  readme_rewrite.md
3.5.0/: _sync_metadata.json  readme_rewrite.md
3.6.0/: _sync_metadata.json  readme_rewrite.md
4.1.0/: _sync_metadata.json  readme_rewrite.md
4.4.1/: _sync_metadata.json  readme_rewrite.md
5.1.2/: _sync_metadata.json  readme_rewrite.md
5.2.0/: _sync_metadata.json  readme_rewrite.md
5.2.1/: _sync_metadata.json  readme_rewrite.md
5.2.2/: _sync_metadata.json  readme_rewrite.md
5.2.3/: _sync_metadata.json  readme_rewrite.md
config/: mods.json
docs/: configuration-guide.md  thunderstore_openapi.json
scripts/: build_package.sh  publish_thunderstore.sh  rewrite_readme_links.py  sync_release_assets.sh  validate_mods_config.sh  validate_thunderstore.sh
thunderstore_pipeline/: __init__.py  __main__.py  build.py  ci_output.py  cli.py  config.py  gh.py  models.py  publish.py  readme_rewriter.py  sync.py  thunderstore_api.py  validate.py
(+12 files in other folders)
